# glsl2wgsl-haskell

./: README.md  language-glsl.cabal  newCode.wgsl
Language/: GLSL.hs
Language/GLSL/: Parser.hs  Pretty.hs  Pretty_backup.hs  Syntax.hs  WGLSLParser_backup.hs  WGSLParser.hs  transformer.hs
glsl/: ast.hs  dev.glsl  sample-01.glsl
wgsl/: code.wgsl
